// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ts-to-openapi ensure descriptions are forwarded 1`] = `
"openapi: 3.0.0
info:
  title: My API
  version: v1
  x-comment: >-
    Generated by core-types-json-schema
    (https://github.com/grantila/core-types-json-schema) on behalf of typeconv
    (https://github.com/grantila/typeconv)
paths: {}
components:
  schemas:
    Point:
      properties:
        x:
          title: Point.x
          description: The distance from the left in mm
          type: number
        'y':
          title: Point.y
          description: The distance from the top in mm
          type: number
      required:
        - x
        - 'y'
      additionalProperties: false
      title: Point
      type: object
"
`;

exports[`ts-to-openapi typescript to openapi 1`] = `
"openapi: 3.0.0
info:
  title: My API
  version: v1
  x-comment: >-
    Generated by core-types-json-schema
    (https://github.com/grantila/core-types-json-schema) on behalf of typeconv
    (https://github.com/grantila/typeconv)
paths: {}
components:
  schemas:
    Foo:
      properties:
        a:
          title: Foo.a
          type: string
        b:
          title: Foo.b
          nullable: true
        c:
          title: Foo.c
          type: number
        d:
          title: Foo.d
          type: boolean
        e:
          $ref: '#/components/schemas/Thing'
          title: Foo.e
      required:
        - a
        - b
        - c
        - d
        - e
      additionalProperties: false
      title: Foo
      type: object
    Thing:
      properties:
        x:
          title: Thing.x
          enum:
            - 6
          type: number
        'y':
          title: Thing.y
          type: string
      required:
        - x
        - 'y'
      additionalProperties: false
      title: Thing
      type: object
"
`;
